Header Size Decreased

--- a/ai-video.html
+++ b/ai-video.html
@@ -91,22 +91,19 @@
     </header>
 
     <!-- Banner Section -->
-    <section class="home_bnr_sect">
+    <section class="inner_banner video_bnr_sect">
       <div class="container">
         <div
           class="home_bnr_clmns_hldr bnr_min_height"
-          style="background-image: url(assets/images/home-banner-bg.jpg)"
+          style="
+            background-image: url(assets/images/ai-video-banner-bg-img.jpg);
+          "
         >
           <div class="bnr_cntnt_hldr">
             <h1 class="heading_h1">
-              Smarter Security. Fewer Headaches. Total Control.
+              Visual AI – <span>See More. Know More. Do More.</span>
             </h1>
-            <p>
-              Unify AI-powered video surveillance, access control, and alarms in
-              one cloud-native platform. Built for operators—not just IT
-              teams—IPTECHVIEW delivers 24/7 oversight without the servers,
-              silos, or stress.
-            </p>
+           
             <div class="hom_bnr_cta_row">
               <a href="#" class="bnr_vid_cta"
                 ><span>See It in Action</span
@@ -119,7 +116,7 @@
             </div>
           </div>
           <div class="ban_img_hldr">
-            <img src="assets/images/home-banner-hero-img.png" alt="" />
+            <img src="assets/images/ai-video-banner-hero-img.png" alt="" />
             <div class="ai_icon_box bnr_icon_box">
               <img src="assets/images/banner-ai-icon.svg" alt="" />
             </div>
