--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <a href="#">Resources</a>
               </li>
               <li><a href="#">Blog</a></li>
-              <li><a href="#">About</a></li>
+              <li><a href="ai-video.html">Video</a></li>
             </ul>
           </nav>
           <span class="nav-toggle"></span>
