AOS Animation Added.
AOS Animation added on home page.

--- a/ai-video.html
+++ b/ai-video.html
@@ -18,6 +18,15 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 
+    <!-- AOS CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+    />
+
+    <!-- AOS JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -166,12 +175,12 @@
           </div>
           <div class="img_il_content">
             <div class="img_il_cntnt_top">
-            <h2 class="heading_h4">Real-Time Alerts That Keep You Informed</h2>
-            <p>Real-Time Alerts That Keep You Informed</p>
+              <h2 class="heading_h4">
+                Real-Time Alerts That Keep You Informed
+              </h2>
+              <p>Real-Time Alerts That Keep You Informed</p>
             </div>
-            <div class="img_il_cntnt_btm">
-
-            </div>
+            <div class="img_il_cntnt_btm"></div>
           </div>
         </div>
       </div>
