--- a/ai-video.html
+++ b/ai-video.html
@@ -180,57 +180,196 @@
               </h2>
               <p>Real-Time Alerts That Keep You Informed</p>
             </div>
-            <div class="img_il_cntnt_btm"></div>
+            <div class="img_il_cntnt_btm">
+              <ul>
+                <li>
+                  <div class="count">1</div>
+                  <div class="list_title">
+                    Instant <br />
+                    notifications
+                  </div>
+                  <div class="list_content">
+                    for motion, violations, or unusual behavior—on any device
+                  </div>
+                </li>
+                <li>
+                  <div class="count">2</div>
+                  <div class="list_title">
+                    Smart <br />
+                    filters
+                  </div>
+                  <div class="list_content">
+                    reduce false alarms and alert fatigue
+                  </div>
+                </li>
+                <li>
+                  <div class="count">3</div>
+                  <div class="list_title">
+                    Customize <br />
+                    alert
+                  </div>
+                  <div class="list_content">
+                    logic by time, zone, event, or user role
+                  </div>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
     <!-- Icon Boxes Section -->
-    <section class="icon_boxes_sect">
+    <section class="icon_boxes_sect inner_page_sect">
       <div class="container">
         <div class="ib_title_cta_row">
           <div class="ib_title_heading">
             <h2 class="heading_h1">
-              Here’s what makes IPTECHVIEW different from the systems
+              Monitor and Manage All Video Feeds Remotely
             </h2>
           </div>
           <div class="ib_title_cta">
             <a href="" class="icon_bg_btn"
               ><img src="assets/images/arrow-top-right-sec.svg" alt=""
             /></a>
-            <span class="heading_h3">you’re trying to replace:</span>
+            <span class="heading_h3"
+              >Your entire system at your fingertips—from anywhere.</span
+            >
           </div>
         </div>
-        <div class="icon_boxes_row">
+        <div class="icon_boxes_row prim_shade">
           <div class="icon_box">
             <div class="icon_box_image">
-              <img src="assets/images/icon-box-img-1.png" alt="" />
+              <img src="assets/images/vide-icon-box-img-1.png" alt="" />
             </div>
             <div class="icon_box_content">
-              <h3>Detect Incidents Automatically</h3>
               <p>
-                Visual AI flags threats the moment they happen—no scrubbing, no
-                delays.
+                View and manage all feeds in a single, cloud-native dashboard
               </p>
             </div>
           </div>
           <div class="icon_box">
             <div class="icon_box_image">
-              <img src="assets/images/icon-box-img-2.png" alt="" />
+              <img src="assets/images/vide-icon-box-img-2.png" alt="" />
             </div>
             <div class="icon_box_content">
-              <h3>Ditch the <br />Hardware</h3>
-              <p>100% cloud-native. No servers, no patches, no local IT.</p>
+              <p>No on-site servers, apps, or VPNs required</p>
             </div>
           </div>
           <div class="icon_box">
             <div class="icon_box_image">
-              <img src="assets/images/icon-box-img-3.png" alt="" />
+              <img src="assets/images/vide-icon-box-img-3.png" alt="" />
             </div>
             <div class="icon_box_content">
-              <h3>Manage Everything in One Dashboard</h3>
-              <p>Control access, cameras, alarms, and alerts from anywhere.</p>
+              <p>Control camera angles, zoom, and playback instantly</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Steps Section -->
+    <section class="steps_sect">
+      <div class="container">
+        <div class="steps_title_row">
+          <h2 class="heading_h1">
+            Turn Video into Insightful, Actionable Data
+          </h2>
+          <p>Go beyond surveillance. Visual AI helps you operate smarter.</p>
+        </div>
+        <div class="steps_cntnt_rows_hldr prim_shade">
+          <div
+            class="steps_cntnt_row"
+            style="background-image: url(assets/images/steps-row-bg-shape.png)"
+          >
+            <div class="steps_count">01</div>
+            <div class="steps_img">
+              <img src="assets/images/why-us-img-1.png" alt="" />
+            </div>
+            <div class="steps_cntnt heading_h4">
+              Track behavior, usage, and compliance trends in real time
+            </div>
+          </div>
+          <div
+            class="steps_cntnt_row"
+            style="background-image: url(assets/images/steps-row-bg-shape.png)"
+          >
+            <div class="steps_count">02</div>
+            <div class="steps_img">
+              <img src="assets/images/why-us-img-1.png" alt="" />
+            </div>
+            <div class="steps_cntnt heading_h4">
+              Use analytics to optimize staffing, layout, and resource
+              allocation
+            </div>
+          </div>
+          <div
+            class="steps_cntnt_row"
+            style="background-image: url(assets/images/steps-row-bg-shape.png)"
+          >
+            <div class="steps_count">03</div>
+            <div class="steps_img">
+              <img src="assets/images/why-us-img-1.png" alt="" />
+            </div>
+            <div class="steps_cntnt heading_h4">
+              Customize metrics and dashboards to support your goals
+            </div>
+          </div>
+          <div
+            class="steps_cntnt_row"
+            style="background-image: url(assets/images/steps-row-bg-shape.png)"
+          >
+            <div class="steps_count">04</div>
+            <div class="steps_img">
+              <img src="assets/images/why-us-img-1.png" alt="" />
+            </div>
+            <div class="steps_cntnt heading_h4">
+              Explore Video Analytics → 3.2 for deeper capabilities
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Scale Business Section -->
+    <section class="scale_business_sect">
+      <div class="container">
+        <div class="scale_tite_row steps_title_row">
+          <h2 class="heading_h1">Built to Scale with Your Business</h2>
+          <p>Whether you have 1 site or 100, IPTECHVIEW grows with you.</p>
+        </div>
+        <div class="scale_boxes_hldr">
+          <div class="scale_box">
+            <div class="scale_box_img">
+              <img src="assets/images/scale-img-1.jpg" alt="" />
+            </div>
+            <div class="scale_box_cntnt">
+              <h3 class="heading_h3">
+                Add up to 10,000 devices with plug-and-play simplicity
+              </h3>
+            </div>
+          </div>
+          <div class="scal_box_clmn">
+            <div class="scale_box">
+              <div class="scale_box_img">
+                <img src="assets/images/scale-img-2.jpg" alt="" />
+              </div>
+              <div class="scale_box_cntnt">
+                <h3 class="heading_h3">
+                  Centralize management across all locations
+                </h3>
+              </div>
+            </div>
+            <div class="scale_box">
+              <div class="scale_box_img">
+                <img src="assets/images/scale-img-3.png" alt="" />
+              </div>
+              <div class="scale_box_cntnt">
+                <a href="#">
+                  <img src="assets/images/arrow-top-right-blue.svg" alt="" />
+                </a>
+                <h3 class="heading_h3">Lower your Cost and Install Faster. </h3>
+              </div>
             </div>
           </div>
         </div>
